--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -9,7 +9,7 @@ on:
     - 'v*'
   #  branches: 
   #    - master
-  schedule:
+  # schedule:
     - cron: "0 */12 * * *"
   watch:
     types: [started]
